# wikitext-asymptote

./: .gitignore  LICENSE  README.md  pyproject.toml
src/wikitext-asymptote/: parse.py
src/wikitext_asymptote/: __init__.py  parse.py
