[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wikitext_asymptote"
version = "0.0.4"
authors = [
  { name="Aitor Pérez", email="aitor.perez@epfl.ch" },
  { name="Ramtin Yazdanian", email="ramtin.yazdanian@epfl.ch" }
]
description = "Custom wikitext parser to produce html, plain text fields and relevant links from wikipedia page source code."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "mwparserfromhell"
]

[project.urls]
"Homepage" = "https://github.com/epflgraph/wikitext-asymptote"
"Bug Tracker" = "https://github.com/epflgraph/wikitext-asymptote/issues"
